fix: dark mode

--- a/src/_postcss/roots/_theme.pcss
+++ b/src/_postcss/roots/_theme.pcss
@@ -3,7 +3,6 @@ body {
   color: var(--color-text);
 }
 
-/*
 @media (prefers-color-scheme: dark) {
   :root {
     --color-mode: 'dark';
@@ -15,5 +14,10 @@ body {
     background-color: var(--color-bg);
     color: var(--color-text);
   }
+
+  .c-post code:not([class]),
+  .c-post kbd:not([class]),
+  .c-post samp:not([class]) {
+    background-color: var(--color-gray-500);
+  }
 }
-*/
